

message Init {
    optional int32 dummy   = 1;
}

message ModuleFilter {
    optional string name   = 1;
    optional bool   filter = 2;
}

message ApiFilter {
    optional string module_name   = 1;
    optional string api_name      = 2;
    optional bool   filter        = 3;
}

message ModuleApis {
    optional string module_name   = 1;

    message ApiDetail {
        optional string name    = 1;    // or original number
        optional int64  va      = 2;
        optional int64  rva     = 3;
        optional bool   forward = 4;
    }
    repeated ApiDetail apis       = 2;
}

message ApiInvoked {
    optional string module_name   = 1;
    optional string api_name      = 2;
    optional int32  action        = 3;
}

